Skip to content

[oss-fuzz 4517081975685120] Undefined-shift · Ogg_ReadTheoraHeader

Ref:

xeon ~/work/git/vlc/build-ubsan $  UBSAN_OPTIONS=print_stacktrace=1:halt_on_error=1:exitcode=42 ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-testcase-vlc-demux-dec-libfuzzer-ogg-4517081975685120
../../modules/demux/ogg.c:2751:36: runtime error: left shift of 1 by 31 places cannot be represented in type 'int'
    #0 0x7f9df17a496e in Ogg_ReadTheoraHeader ../../modules/demux/ogg.c:2751
    #1 0x7f9df17b1e91 in Ogg_FindLogicalStreams ../../modules/demux/ogg.c:1759
    #2 0x7f9df17b6bd6 in Ogg_BeginningOfStream ../../modules/demux/ogg.c:2293
    #3 0x7f9df17bbe50 in Demux ../../modules/demux/ogg.c:438
    #4 0x7f9df17b7cfb in Open ../../modules/demux/ogg.c:271
    #5 0x7f9df301b06f in demux_Probe ../../src/input/demux.c:112
    #6 0x7f9df2fbde4f in vlc_module_load ../../src/modules/modules.c:230
    #7 0x7f9df301bdc3 in demux_NewAdvanced ../../src/input/demux.c:196
    #8 0x7f9df301c20c in demux_New ../../src/input/demux.c:77
    #9 0x55d02bf53354 in demux_process_stream ../../test/src/input/demux-run.c:300
    #10 0x55d02bf535a5 in vlc_demux_process_url ../../test/src/input/demux-run.c:354
    #11 0x55d02bf53648 in vlc_demux_process_path ../../test/src/input/demux-run.c:368
    #12 0x55d02bf52453 in main ../../test/vlc-demux-run.c:50
    #13 0x7f9df2433ca7 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58
    #14 0x7f9df2433d64 in __libc_start_main_impl ../csu/libc-start.c:360
    #15 0x55d02bf522e0 in _start (/home/tom/work/git/vlc/build-ubsan/test/vlc-demux-dec-run+0x32e0) (BuildId: 34e33452c37c84ba30e70197ed5977f9fba41c16)

Samples:

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information