demux: ogg: fix undefined shift in theora parsing

We can skip the loop since i_granule_shift will always equal the 5-bit value read
from the header.

Fixes #29304